@@ -22,7 +22,8 @@
 </div>
 <div id="users-contain" class="ui-widget">
 <h1>Records:
-<button id="create-user">Create new record</button></h1>
+<button id="create-user">Create new record</button>
+<button id="purge-records">Purge old records</button></h1>
 <table id="recordlist"><!--<table id="clist1"><table id="users" class="ui-widget ui-widget-content">-->
 <thead>
 <tr class="ui-widget-header ">
@@ -31,6 +32,10 @@
 <th class="rat">at</th>
 <th class="rtill">till</th>
 <th class="rcontrols">control</th>
+<th class="rcontrols">c1</th>
+<th class="rcontrols">c2</th>
+<th class="rcontrols">c3</th>
+<th class="rcontrols">c4</th>
 </tr>
 </thead>
 <tbody>
@@ -38,8 +43,11 @@
 </table>
 </div>
     
-<div id="dialog" title="Dialog Title">
+<div id="dialog" title="Record removal">
 	<p>Shall I delete this record?</p>
+</div>
+<div id="confirm01" title="Purging records">
+	<p>All old records will be deleted! Are you sure?</p>
 </div>
 <script type="text/javascript">
     var today = new Date();
