@@ -1,4 +1,0 @@
-2013-02-03 0.4.3 CherryPy Server implemented for better stability under load 
-2013-02-03 0.4.2a Syno-branch only: broken update script fixed. Sorry for inconvenience.
-2013-02-03 0.4.2 Logging, license information, further optimisation
-2013-02-02 0.4.1 Default database only. Database will be kept on update.
